# prefect-dbt-flow

./: .gitignore  .pre-commit-config.yaml  GETTING_STARTED.md  LICENSE  README.md  README_PROJECT.md  TODO.md  mkdocs.yml  my_flow.py  pyproject.toml  setup.py  versions.json
.dev/: DEV.md  Dockerfile  docker-compose.yml  requirements.txt
.github/: codecov.yml
.github/workflows/: publish.yml  tests.yaml
0.1.1/: .coverage-tmp.html  404.html  index.html  sitemap.xml
0.1.1/code/: index.html
0.1.1/coverage/: covindex.html  (+13 more)
0.1.2/: .coverage-tmp.html  404.html  index.html  objects.inv  sitemap.xml
0.1.3/: .coverage-tmp.html  404.html  index.html  objects.inv  sitemap.xml
0.1.4/: .coverage-tmp.html  404.html  index.html  objects.inv  sitemap.xml
0.1.6/: 404.html  index.html  sitemap.xml
0.1.7/: 404.html  index.html  objects.inv  sitemap.xml
0.2.0/: 404.html  index.html  sitemap.xml
0.2.1/: 404.html  index.html  sitemap.xml
0.3.0/: 404.html  index.html  objects.inv  sitemap.xml
0.3.1/: 404.html  index.html  sitemap.xml
0.4.0/: 404.html  index.html  sitemap.xml
0.4.1/: 404.html  index.html  sitemap.xml
0.5.0/: 404.html  index.html  sitemap.xml
0.5.1/: 404.html  index.html  sitemap.xml
0.5.2/: 404.html  index.html  sitemap.xml
0.5.3/: 404.html  index.html  sitemap.xml
0.5.4/: 404.html  index.html  objects.inv  sitemap.xml
0.5.5/: 404.html  index.html  sitemap.xml
0.5.6/: 404.html  index.html  sitemap.xml
docker/: Dockerfile  docker-compose.yml
docs/: code.md  dag_integration.md  getting_started.md  how_it_works.md  profile_overrides.md
latest/: .coverage-tmp.html
prefect_dbt_flow/: __init__.py  flow.py  version.py
prefect_dbt_flow_2/: flow.py
tests/: test_flow.py
(+493 files in other folders)
