[tool.poetry]
name = "prefect-dbt-flow"
version = "0.0.0"
description = "Prefect - dbt integration"
authors = [
    "David Valdez <david@dataroots.io>",
    "Nico Gelders <nico@dataroots.io>",
]
license = "MIT"
readme = "README.md"
homepage = "https://datarootsio.github.io/prefect-dbt-flow"
repository = "https://github.com/datarootsio/prefect-dbt-flow"
keywords = ["dbt", "prefect"]

[tool.poetry.dependencies]
python = "^3.9"
prefect = "^2.7"

[tool.poetry.group.dev.dependencies]
black = ">=23.3,<25.0"
isort = "^5.10.1"
pytest = "^7.3.1"
pre-commit = "^3.3.2"
ruff = "^0.0.270"
dbt-duckdb = "1.5.2"
mypy = "^1.5.1"
mike = "^1.1.2"
mkdocs-material = "^9.4.3"
mkdocs-autorefs = "^0.5.0"
mkdocs-coverage = "^1.0.0"
mkdocstrings = { extras = ["python"], version = "^0.23.0" }
coverage = "^7.3.2"
pytest-xdist = "^3.3.1"
pytest-cov = "^4.1.0"
types-pyyaml = "^6.0.12.12"
setuptools = "67.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
